// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RacingTaskSolver 2017-07-17-lev 1`] = `
"
   1	  IGP	  104	  14:50:57	  01:48:14	  136.1 km	   75.47 km/h
   2	  1G 	  101	  14:54:34	  01:56:21	  136.1 km	   70.21 km/h
   3	  P9 	  104	  14:51:22	  01:58:40	  136.1 km	   68.84 km/h
   4	  MI 	  104	  14:51:15	  01:59:41	  136.1 km	   68.25 km/h
   5	  999	  100	  14:51:52	  02:06:39	  136.1 km	   64.49 km/h
   6	  LC 	  104	  14:53:46	  02:02:47	  136.1 km	   66.53 km/h
   7	  MS 	   98	  14:52:13	  02:12:04	  136.1 km	   61.85 km/h
   8	  E1 	  104	  14:50:58	  02:04:32	  136.1 km	   65.60 km/h
   9	  1R 	  104	  14:52:58	  02:05:15	  136.1 km	   65.22 km/h
  10	  SW 	   98	  14:52:26	  02:13:19	  136.1 km	   61.27 km/h
  11	  1  	  101	  14:47:05	  02:09:50	  136.1 km	   62.91 km/h
  12	  FR 	   98	  14:51:34	  02:14:25	  136.1 km	   60.77 km/h
  13	  H1 	  105	  14:53:02	  02:06:09	  136.1 km	   64.75 km/h
  14	  EI 	  107	  14:51:15	  02:04:12	  136.1 km	   65.77 km/h
  15	  sq 	  107	  14:53:01	  02:08:54	  136.1 km	   63.37 km/h
  16	  JM 	  101	  14:56:52	  02:17:36	  136.1 km	   59.36 km/h
  17	  XN 	   98	  14:51:30	  02:23:14	  136.1 km	   57.03 km/h
  18	  T1 	  104	  15:06:25	  02:18:02	  136.1 km	   59.18 km/h
  19	  WJ 	  104	  15:06:22	  02:30:44	  136.1 km	   54.19 km/h
  20	  33 	   98	  14:51:16	          	  103.6 km	             
  21	  ZG 	  104	  14:06:55	          	   94.2 km	             
"
`;

exports[`RacingTaskSolver 2017-07-17-lev until 2017-07-17T17:00:00Z 1`] = `
"
   1	  IGP	  104	  14:50:57	  01:48:14	  136.1 km	   75.47 km/h
   2	  1G 	  101	  14:54:34	  01:56:21	  136.1 km	   70.21 km/h
   3	  P9 	  104	  14:51:22	  01:58:40	  136.1 km	   68.84 km/h
   4	  MI 	  104	  14:51:15	  01:59:41	  136.1 km	   68.25 km/h
   5	  999	  100	  14:51:52	  02:06:39	  136.1 km	   64.49 km/h
   6	  LC 	  104	  14:53:46	  02:02:47	  136.1 km	   66.53 km/h
   7	  E1 	  104	  14:50:58	  02:04:32	  136.1 km	   65.60 km/h
   8	  1R 	  104	  14:52:58	  02:05:15	  136.1 km	   65.22 km/h
   9	  1  	  101	  14:47:05	  02:09:50	  136.1 km	   62.91 km/h
  10	  H1 	  105	  14:53:02	  02:06:09	  136.1 km	   64.75 km/h
  11	  EI 	  107	  14:51:15	  02:04:12	  136.1 km	   65.77 km/h
! 12	  MS 	   98	  13:55:53	          	  126.3 km	             
! 13	  FR 	   98	  14:46:35	          	  124.2 km	             
! 14	  SW 	   98	  13:59:06	          	  124.1 km	             
! 15	  sq 	  107	  14:00:07	          	  131.0 km	             
! 16	  XN 	   98	  14:51:30	          	  114.4 km	             
! 17	  JM 	  101	  14:56:52	          	  114.2 km	             
! 18	  33 	   98	  14:51:16	          	  103.6 km	             
! 19	  T1 	  104	  14:48:31	          	  109.7 km	             
! 20	  WJ 	  104	  14:48:16	          	  100.5 km	             
  21	  ZG 	  104	  14:06:55	          	   94.2 km	             
"
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" can handle outlandings 1`] = `
Object {
  "completed": false,
  "distance": 94170.212,
  "path": Array [
    StartEvent {
      "point": lon 6.9179704 lat 51.1276447,
      "time": 2017-07-17T14:06:54.931Z,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2812555 lat 50.9890756,
      "time": 2017-07-17T15:42:59.779Z,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": lon 6.1937554 lat 51.1722784,
      "time": 2017-07-17T16:21:04.919Z,
      "type": "turn",
    },
  ],
  "speed": undefined,
  "time": undefined,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns a result 1`] = `
Object {
  "completed": true,
  "distance": 136145.27,
  "path": Array [
    StartEvent {
      "point": lon 6.9313498 lat 51.0847306,
      "time": 2017-07-17T14:50:56.825Z,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2829181 lat 50.9964654,
      "time": 2017-07-17T15:24:26.380Z,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": lon 6.1941852 lat 51.1723459,
      "time": 2017-07-17T15:51:51.555Z,
      "type": "turn",
    },
    TurnEvent {
      "num": 3,
      "point": lon 6.6075025 lat 50.9694879,
      "time": 2017-07-17T16:20:04.143Z,
      "type": "turn",
    },
    FinishEvent {
      "point": lon 7.0084235 lat 51.0985126,
      "time": 2017-07-17T16:39:10.837Z,
      "type": "finish",
    },
  ],
  "speed": 75.473058,
  "time": 6494.0122,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns an intermediate result 1`] = `
Object {
  "completed": false,
  "distance": 52613.082,
  "path": Array [
    StartEvent {
      "point": lon 6.9147855 lat 51.1378604,
      "time": 2017-07-17T14:17:08.833Z,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2829181 lat 50.9964654,
      "time": 2017-07-17T15:24:26.380Z,
      "type": "turn",
    },
  ],
  "speed": undefined,
  "time": undefined,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns an intermediate result 2`] = `
Object {
  "completed": true,
  "distance": 136145.27,
  "path": Array [
    StartEvent {
      "point": lon 6.9313498 lat 51.0847306,
      "time": 2017-07-17T14:50:56.825Z,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": lon 6.2829181 lat 50.9964654,
      "time": 2017-07-17T15:24:26.380Z,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": lon 6.1941852 lat 51.1723459,
      "time": 2017-07-17T15:51:51.555Z,
      "type": "turn",
    },
    TurnEvent {
      "num": 3,
      "point": lon 6.6075025 lat 50.9694879,
      "time": 2017-07-17T16:20:04.143Z,
      "type": "turn",
    },
    FinishEvent {
      "point": lon 7.0084235 lat 51.0985126,
      "time": 2017-07-17T16:39:10.837Z,
      "type": "finish",
    },
  ],
  "speed": 75.473058,
  "time": 6494.0122,
}
`;
